refactor(platform): applying better practices to repositories and services. Making the pages a bit more pleasing to look at